Admin form design done.

--- a/src/app/shared/components/role-tabs/role-tabs.html
+++ b/src/app/shared/components/role-tabs/role-tabs.html
@@ -14,7 +14,7 @@
         </p>
       </a>
       
-      <a routerLink="/signup/admin" routerLinkActive="border-b-2 border-primary" class="flex items-center justify-center py-4 cursor-pointer transition-colors">
+      <a routerLink="/signup-admin" routerLinkActive="border-b-2 border-primary" class="flex items-center justify-center py-4 cursor-pointer transition-colors">
         <p routerLinkActive="text-primary font-bold" class="text-[#896861] dark:text-gray-400 text-base font-medium">
           Admin
         </p>
