--- a/src/app/features/signup-driver/signup-driver.html
+++ b/src/app/features/signup-driver/signup-driver.html
@@ -72,11 +72,6 @@
               [control]="passwordControl"
               [showPasswordToggle]="true"
             />
-            <div class="flex justify-end mt-1">
-              <a routerLink="/forgot-password" class="text-xs sm:text-sm font-bold text-[#896861] hover:text-primary transition-colors">
-                Forgot Password?
-              </a>
-            </div>
           </div>
 
           
@@ -99,7 +94,7 @@
         <div class="text-center pt-2 pb-8">
           <p class="text-[#896861] dark:text-gray-400 text-sm font-medium">
             Already have an account?
-            <a routerLink="/login" class="text-primary font-bold hover:text-[#d43b1e] transition-colors ml-1">Log in</a>
+            <a routerLink="/login-driver" class="text-primary font-bold hover:text-[#d43b1e] transition-colors ml-1">Log in</a>
           </p>
         </div>
       </div>
