--- a/src/app/features/signup-user/signup-user/signup-user.html
+++ b/src/app/features/signup-user/signup-user/signup-user.html
@@ -48,6 +48,14 @@
             [control]="phoneControl"
           />
 
+          <app-form-input
+           label="Address"
+           placeholder="123 Street, New York"
+           type="text"
+           icon="building"
+           [control]="addressControl"
+          />
+
           <!-- Password Field -->
           <div class="flex flex-col gap-1.5">
             <app-form-input
